Add UI stuff 👏 💅 ⚡️

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <!-- <script src="https://fb.me/react-dom-15.0.1.js"></script> -->
     <script src="vendor/react-15.0.1.js"></script>
     <script src="vendor/react-dom-15.0.1.js"></script>
+    <link href="https://cdn.auth0.com/styleguide/latest/index.css" rel="stylesheet" />
+    <link href="http://auth0.github.io/lock-social-icons/dist/index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
